K8S/kafka-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
           image: confluentinc/cp-kafka:latest # change the image version as per your requirement
          ports:
            - containerPort: 9092 # change the Kafka port as per your requirement
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
  - name: rbmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rbmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: kafka
  ports:
  - name: rbmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rbmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
